# TermitChat

./: .env  .gitignore  CMakeLists.txt  README.md  main.cpp
client/: CMakeLists.txt
client/includes/: global_params.hpp  handle_mqtt.hpp  handle_uuid.hpp
client/includes/menus/: enter_name_menu.hpp  menu_state.hpp
client/src/: client_main.cpp  global_params.cpp  handle_mqtt.cpp  handle_uuid.cpp
client/src/menus/: enter_name_menu.cpp  menu_state.cpp
server/: CMakeLists.txt
server/includes/: asio_task.hpp  debug.hpp  global_params.hpp  mqtt_client.hpp
server/src/: asio_task.cpp  debug.cpp  global_params.cpp  mqtt_client.cpp  server_main.cpp
src/: main.cpp
